apps/media/jellyfin/manifests/jellyfin-external.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-external
  namespace: media
  labels:
    external-dns.edgard.org/scope: external
    hajimari.edgard.org/icon: play-circle
    hajimari.edgard.org/enabled: "true"
spec:
  parentRefs:
    - name: envoy-gateway-external
      namespace: platform-system
      sectionName: https
  hostnames:
    - jellyfin.edgard.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 8096
