apps/media/jellyfin/manifests/jellyfin-internal.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-internal
  namespace: media
  labels:
    external-dns.edgard.org/scope: internal
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: platform-system
      sectionName: https
  hostnames:
    - jellyfin.edgard.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 8096
